--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+server.port=8050
+gameservice.baseurl= ${GAME_SERVICE_BASEURL:localhost:8052}
+developerservice.baseurl= ${DEVELOPER_SERVICE_BASEURL:localhost:8051}
