--- a/pom.xml
+++ b/pom.xml
@@ -54,5 +54,10 @@
             </plugin>
         </plugins>
     </build>
+         
+        <properties>
+  <sonar.organization>tibeau</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
 
 </project>
